<resources>
    <string name="app_name">Warehouse Helper</string>
    <string name="app_name_dashboard">Warehouse Helper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="yes">Yes</string>
    <string name="nodelete">No</string>
    <string name="update">Update Data</string>
    <string name="update_toolbar_peminjaman">Update Data Peminjaman</string>
    <string name="update_inventaris">Update Data</string>
    <string name="update_toolbar_inventaris">Update Data Barang</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tambah_barang">Tambah Barang</string>
    <string name="memudahkan_petugas_logistik_untuk_melakukan_pengelolaan_data_barang">Memudahkan Petugas Logistik untuk melakukan Pengelolaan data barang</string>
    <string name="next">NEXT</string>
    <string name="cari_barang">Cari Barang</string>
    <string name="memudahkan_petugas_logistik_untuk_melakukan_pencarian_barang">Memudahkan Petugas Logistik untuk melakukan pencarian barang</string>
    <string name="Keluar">Keluar Barang</string>
    <string name="btn_keluar">NEXT</string>
    <string name="tvlogin">Login</string>
    <string name="tvemail">Email</string>
    <string name="tvpasswordlog">Password</string>
    <string name="btn_login">Login</string>
    <string name="regnama">Username</string>
    <string name="register">Register</string>
    <string name="regpassword">Password</string>
    <string name="btn_register">Register</string>
    <string name="email">Email</string>
    <string name="t_reg">Belum punya akun ?</string>
    <string name="bt_reg_login">Sign Up</string>
    <string name="t_email" />
    <string name="t_pass" />
    <string name="t_berhasil">Selamat Datang di Warehouse Helper</string>
    <string name="bt_logout">"Logout "</string>
    <string name="t_logo">Warehouse Helper</string>
    <string name="t_letstour">Lets Tour !</string>
    <string name="test_about">Aziz Alfauzi</string>
    <string name="aboutmenu">About</string>
    <string name="t_selamat_datang">Selamat</string>
    <string name="t_datang">Datang</string>
    <string name="t_logout">Logout</string>
    <string name="t_nama_barang">"Nama Barang "</string>
    <string name="t_jumlah_barang">Jumlah Barang</string>
    <string name="t_harga_barang">Harga Barang</string>
    <string name="t_tanggal">Barang masuk  :</string>
    <string name="t_tanggal_pilihan">DD-MM-YYYY</string>
    <string name="bt_tambah">Tambah Barang</string>
    <string name="bt_kembali">Back</string>
    <string name="t_barang_masuk">Tanggal Barang Masuk :</string>
    <string name="t_search">Cari Data...</string>
    <string name="bt_edit_data">"Edit "</string>
    <string name="t_jumlah_cari_data">(Jumlah Barang)</string>
    <string name="t_find_nama">Nama Barang :</string>
    <string name="t_find_jumlah">Jumlah Barang :</string>
    <string name="t_find_harga">Harga Barang :</string>
    <string name="bt_bacak_find">Kembali</string>
    <string name="bt_delete">Delete</string>
    <string name="t_hapus_data">Apakah anda akan menghapus data ini ?</string>
    <string name="t_nama_peminjaman">Nama Peminjam</string>
    <string name="t_nim_peminjam">NIM</string>
    <string name="t_kelas_peminjam">Kelas</string>
    <string name="t_barang_pinjam">Barang Yang Dipinjam</string>
    <string name="t_jumlah_pinjam">Jumlah</string>
    <string name="t_kata_pinjam">Barang Yang Dipinjam</string>
    <string name="t_kata_jumlah">Jumlah</string>
    <string name="t_jam_masuk_pinjaman">Waktu Pinjaman :</string>
    <string name="t_jamkembali_pinjaman">Waktu Pengembalian :</string>
    <string name="t_hasil_jam_masuk_peminjaman">00.00</string>
    <string name="t_hasil_keluar_jam_peminjaman">00.00</string>
    <string name="t_pinjam_barang">Pinjam Barang</string>
    <string name="t_back_peminjaman">Kembali</string>
    <string name="t_jumlah_riwayat_peminjaman">(Jumlah Barang)</string>
    <string name="t_jam_peminjaman">Waktu Peminjaman :</string>
    <string name="t_nama_riwayat">Nama :</string>
    <string name="t_nim_riwayat">Nim :</string>
    <string name="t_kelas_riwayat">Kelas :</string>
    <string name="t_barang_riwayat">Barang Yang di pinjam :</string>
    <string name="t_waktupinjam_riwayat">Waktu Peminjaman :</string>
    <string name="t_waktupengembalian_riwayat">Waktu Pengembalian :</string>
    <string name="t_nama_barang_keluar">Nama Barang</string>
    <string name="t_jumlah_barang_keluar">Jumlah Barang</string>
    <string name="t_tanggal_keluar">Tanggal Barang Keluar :</string>
    <string name="t_date_keluar">DD/MM/YYYY</string>
    <string name="t_keluar_barang">Keluar Barang</string>
    <string name="t_success_tambah_data_atas">Yay!</string>
    <string name="t_success_tambah_data_bawah">"Berhasil Menambahkan Data "</string>
    <string name="t_success_pinjam_barang">Berhasil Meminjam Barang</string>
    <string name="bt_kembali_pinjam_barang">Kembali</string>
    <string name="t_success_keluar_barang">Berhasil Melakukan Keluar Barang</string>
    <string name="t_splash">Warehouse Helper</string>
    <string name="t_back_auth">Back</string>
    <string name="t_tanggal_masuk">Tanggal Barang Masuk :</string>
    <string name="tv_kirim">Proyektor</string>
</resources>
