<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.d3ifcool.warehousehelper.autentifikasi.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/tvlogin"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="52sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_emaillreg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/tvemail"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login" />

            <TextView
                android:id="@+id/tv_passlog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/tvpasswordlog"
                android:textColor="@android:color/background_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inp_email_login" />

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/custom_button_2"
                android:fontFamily="@font/montserrat"
                android:text="@string/btn_login"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="@+id/inp_pass_login"
                app:layout_constraintStart_toStartOf="@+id/inp_pass_login"
                app:layout_constraintTop_toBottomOf="@+id/inp_pass_login" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="60dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/t_reg"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnlogin" />

            <Button
                android:id="@+id/bt_reg_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_button_2"
                android:fontFamily="@font/montserrat"
                android:text="@string/bt_reg_login"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="@+id/btnlogin"
                app:layout_constraintStart_toStartOf="@+id/btnlogin"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/inp_email_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:inputType="textPersonName"
                android:text="@string/t_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_emaillreg" />

            <EditText
                android:id="@+id/inp_pass_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:inputType="textPassword"
                android:text="@string/t_pass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_passlog" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>