<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".boarding.OnboardingSatu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- TODO: Update blank fragment layout -->

            <ImageView
                android:id="@+id/iv_tambahbarang"
                android:layout_width="200dp"
                android:layout_height="177dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_undraw_logistics_x4dc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_tambahbarang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tambah_barang"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_tambahbarang" />

            <TextView
                android:id="@+id/tv_kalimatsatu"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/memudahkan_petugas_logistik_untuk_melakukan_pengelolaan_data_barang"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_tambahbarang" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_group_satu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_kalimatsatu" />

            <Button
                android:id="@+id/btn_nextsatu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/custom_button_2"
                android:text="@string/next"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="@+id/tv_kalimatsatu"
                app:layout_constraintStart_toStartOf="@+id/tv_kalimatsatu"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <Button
                android:id="@+id/btn_skipsatu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_button_2"
                android:text="SKIP"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="@+id/btn_nextsatu"
                app:layout_constraintStart_toStartOf="@+id/btn_nextsatu"
                app:layout_constraintTop_toBottomOf="@+id/btn_nextsatu" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>